[project]
name = "kinpy"
version = "0.4.2"
description = ""
authors = [{ name = "neka-nat", email = "nekanat.stock@gmail.com" }]
requires-python = ">=3.9,<3.12"
license = "MIT"
dependencies = [
    "numpy>=1.24.3,<=1.26.0 ; python_version == '3.9'",
    "numpy>=1.24.3,<2 ; python_version >= '3.10' and python_version < '3.12'",
    "scipy>=1.11.2,<2",
    "transformations>=2020.1.1,<2021",
    "absl-py>=0.11.0,<0.12",
    "lxml>=4.6.2,<5",
    "PyYAML>=6.0.1,<7",
    "vtk>=9.0.1,<10",
]

[dependency-groups]
dev = [
    "twine>=3.3.0,<4",
    "isort>=5.9.3,<6",
    "black>=22.6.0,<23",
    "flake8>=5.0.4,<6",
    "flake8-bugbear>=22.8.23,<23",
    "flake8-simplify>=0.19.3,<0.20",
    "mypy>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
