[project]
name = "kinpy"
version = "0.4.2"
description = ""
authors = [{ name = "neka-nat", email = "nekanat.stock@gmail.com" }]
requires-python = ">=3.10,<3.14"
license = "MIT"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.11.2",
    "transformations>=2020.1.1",
    "absl-py>=0.11.0",
    "lxml>=5.0.0",
    "PyYAML>=6.0.1",
    "vtk>=9.0.1",
]

[dependency-groups]
dev = [
    "twine>=3.3.0,<4",
    "isort>=5.9.3,<6",
    "black>=22.6.0,<23",
    "flake8>=5.0.4,<6",
    "flake8-bugbear>=22.8.23,<23",
    "flake8-simplify>=0.19.3,<0.20",
    "mypy>=1.0.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
