[project]
name = "kinpy"
version = "0.5.1"
description = ""
authors = [{ name = "neka-nat", email = "nekanat.stock@gmail.com" }]
requires-python = ">=3.10,<3.14"
license = "MIT"
keywords = [
  "robotics", "kinematics", "URDF", "SDF", "MJCF",
  "jacobian", "inverse kinematics", "visualization", "VTK"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.11.2",
    "transformations>=2020.1.1",
    "absl-py>=0.11.0",
    "lxml>=5.0.0",
    "PyYAML>=6.0.1",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "isort>=5.9.3,<6",
    "black>=22.6.0,<23",
    "flake8>=5.0.4,<6",
    "flake8-bugbear>=22.8.23,<23",
    "flake8-simplify>=0.19.3,<0.20",
    "mypy>=1.0.1,<2",
]


[project.optional-dependencies]
all = [
    "vtk>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "kinpy/**.py",
  "kinpy/mjcf_parser/schema.xml",
]
exclude = [
  "/tests/**",
  "/examples/**",
  "/scripts/**",
]

[tool.hatch.build.targets.wheel]
packages = ["kinpy"]
force-include = { "kinpy/mjcf_parser/schema.xml" = "kinpy/mjcf_parser/schema.xml" }

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
